inou/prp/tests/errors/attribute_initial_renamed.prp
/*
:name: attribute_initial_renamed
:type: error
:error: not a Pyrope attribute name
:help: use `init`
*/

reg r:u8:[initial=0] = 0  // locate_error_here
